--- a/src/MvcDemos/Web.config
+++ b/src/MvcDemos/Web.config
@@ -31,6 +31,7 @@
       </system.Web>
   -->
   <system.web>
+    <!--<globalization enableclientbasedculture="true" uiculture="nl-BE" culture="auto"></globalization>-->
     <compilation debug="true" targetFramework="4.5" />
     <pages controlRenderingCompatibilityVersion="4.0">
       <namespaces>
