--- a/src/MvcDemos/packages.config
+++ b/src/MvcDemos/packages.config
@@ -16,7 +16,7 @@
   <package id="jQuery.UI.Combined" version="1.10.3" targetFramework="net40" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
   <package id="jquery-globalize" version="0.1.1" targetFramework="net40" />
-  <package id="MagicalUnicornMvcErrorToolkit" version="1.0" targetFramework="net45" />
+  <package id="MagicalUnicorn.MvcErrorToolkit" version="2.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.30506.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc.FixedDisplayModes" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Providers" version="1.1" targetFramework="net40" />
