--- a/src/MvcDemos/Web.config
+++ b/src/MvcDemos/Web.config
@@ -74,9 +74,13 @@
         <add connectionStringName="MembershipConnection" applicationName="MyCoolApplication" name="DefaultSessionProvider" type="System.Web.Providers.DefaultSessionStateProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
       </providers>
     </sessionState>
-    <customErrors mode="On" defaultRedirect="/ServerError">
-      <error statusCode="404" redirect="/NotFound" />
+
+    <customErrors mode="On" defaultRedirect="~/views/error/Unknown.cshtml">
+      <error statusCode="404" redirect="~/views/error/404.cshtml" />
+      <error statusCode="401" redirect="~/views/error/401.cshtml" />
+      <error statusCode="500" redirect="~/views/error/500.cshtml" />
     </customErrors>
+
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
@@ -92,11 +96,11 @@
       <add name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework64\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness64" responseBufferLimit="0" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
-    <httpErrors errorMode="Custom">
-      <remove statusCode="404" subStatusCode="-1" />
-      <error statusCode="404" path="/NotFound" responseMode="ExecuteURL" />
-      <remove statusCode="500" subStatusCode="-1" />
-      <error statusCode="500" path="/ServerError" responseMode="ExecuteURL" />
+    <httpErrors existingResponse="Replace">
+      
+      
+      
+      
     </httpErrors>
   </system.webServer>
   <entityFramework>
