--- a/src/MvcDemos/MvcDemos.csproj
+++ b/src/MvcDemos/MvcDemos.csproj
@@ -209,14 +209,10 @@
     <Compile Include="Areas\SecurityGuard\Models\UserViewModel.cs" />
     <Compile Include="Areas\SecurityGuard\SecurityGuardAreaRegistration.cs" />
     <Compile Include="App_Start\FluentSecurityConfig.cs" />
-    <Compile Include="code\IBusinessService.cs" />
-    <Compile Include="code\StrategyFactory.cs" />
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\SGAccountController.cs" />
-    <Compile Include="Core\Components\CoreController.cs" />
-    <Compile Include="Core\CustomModelMetadataProvider.cs" />
     <Compile Include="Core\GlobalError\ErrorHandlingActionInvoker.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -229,8 +225,6 @@
     <Compile Include="Core\GlobalError\LoggingExceptionFilter.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Core\Policies\DenyAccessPolicyViolationHandler.cs" />
-    <Compile Include="Core\Policies\LocalOnlyPolicy.cs" />
     <Compile Include="DI\CommonConventions.cs" />
     <Compile Include="DI\IDependencyInjectionContainer.cs" />
     <Compile Include="DI\InjectableControllerFactory.cs" />
@@ -259,8 +253,6 @@
     <Compile Include="Models\JqGrid\GridSortOrder.cs" />
     <Compile Include="Models\JqGrid\JqGridArgs.cs" />
     <Compile Include="Models\LogOnViewModel.cs" />
-    <Compile Include="Models\Movie.cs" />
-    <Compile Include="Models\MovieGenre.cs" />
     <Compile Include="Models\MvcApplication3Context.cs" />
     <Compile Include="Models\MvcDemosContext.cs" />
     <Compile Include="Models\RequestStatus.cs" />
@@ -287,9 +279,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Samples\LocalizationController.cs" />
     <Compile Include="Samples\EnumLocalizedDropDown\EnumLocalizedDropDownController.cs" />
-    <Compile Include="Samples\EnumsTemplates\MovieGenreController.cs" />
     <Compile Include="Samples\FluentValidation\GenreController.cs" />
-    <Compile Include="Samples\JqGrid\JqGridDemoController.cs" />
     <Compile Include="Samples\MixedHtmlInput\MixedHtmlInputController.cs" />
     <Compile Include="Samples\Security\ParameterTamperingController.cs" />
     <Compile Include="ValidationSummaryJQuery.cs" />
@@ -303,6 +293,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Content Include="app\AjaxForm\mockAjax.js" />
     <Content Include="app\JqgridDemo\jqgridDemoModule.js" />
     <Content Include="Content\bootstrap-responsive.css" />
     <Content Include="Content\bootstrap-responsive.min.css" />
@@ -498,6 +489,8 @@
     <Content Include="Scripts\i18n\grid.locale-vi.js" />
     <Content Include="Scripts\jquery-1.9.1.js" />
     <Content Include="Scripts\jquery-1.9.1.min.js" />
+    <Content Include="Scripts\jquery-migrate-1.2.1.js" />
+    <Content Include="Scripts\jquery-migrate-1.2.1.min.js" />
     <Content Include="Scripts\jquery-ui-1.10.3.js" />
     <Content Include="Scripts\jquery-ui-1.10.3.min.js" />
     <Content Include="Scripts\jquery.globalize\cultures\globalize.culture.af-ZA.js" />
@@ -928,6 +921,10 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="code\" />
+    <Folder Include="Core\Components\" />
+    <Folder Include="Samples\EnumsTemplates\" />
+    <Folder Include="Samples\JqGrid\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Store\Index.cshtml" />
