--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -41,8 +41,7 @@
     <Reference Include="AutoMapper.Net4">
       <HintPath>..\..\packages\AutoMapper.3.1.0\lib\net40\AutoMapper.Net4.dll</HintPath>
     </Reference>
-    <Reference Include="EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="EntityFramework">
       <HintPath>..\..\packages\EntityFramework.5.0.0\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
     <Reference Include="FluentValidation">
@@ -83,7 +82,6 @@
     <Compile Include="Entities\OrderDetail.cs" />
     <Compile Include="Handlers\Genre\HasPermissionToGet.cs" />
     <Compile Include="Handlers\Genre\CanBeAdded.cs" />
-    <Compile Include="IValidator.cs" />
     <Compile Include="MusicStoreEntities.cs" />
     <Compile Include="MvcDemosEntities.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
