--- a/src/UnitTests/packages.config
+++ b/src/UnitTests/packages.config
@@ -1,22 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AutoFixture" version="3.12.1" targetFramework="net40" />
-  <package id="AutoFixture.AutoFakeItEasy" version="3.12.1" targetFramework="net40" />
+  <package id="AutoFixture" version="3.16.5" targetFramework="net45" />
+  <package id="AutoFixture.AutoFakeItEasy" version="3.16.5" targetFramework="net45" />
   <package id="AutoMapper" version="3.1.0" targetFramework="net45" />
   <package id="CommonServiceLocator" version="1.0" targetFramework="net45" />
   <package id="EntityFramework" version="5.0.0" targetFramework="net45" />
-  <package id="FakeItEasy" version="1.13.1" targetFramework="net40" />
-  <package id="FluentAssertions" version="2.1.0.0" targetFramework="net45" />
-  <package id="FluentSecurity" version="2.0.0" targetFramework="net40" />
-  <package id="FluentSecurity.TestHelper" version="2.0.0" targetFramework="net40" />
+  <package id="FakeItEasy" version="1.17.0" targetFramework="net45" />
+  <package id="FluentAssertions" version="2.2.0.0" targetFramework="net45" />
+  <package id="FluentSecurity" version="2.1.0" targetFramework="net45" />
+  <package id="FluentSecurity.TestHelper" version="2.1.0" targetFramework="net45" />
   <package id="FluentValidation" version="5.0.0.1" targetFramework="net45" />
   <package id="GenericRepository" version="0.3.1-pre01" targetFramework="net45" />
-  <package id="GenericRepository.EF" version="0.3.1-pre01" targetFramework="net45" />
+  <package id="GenericRepository.EF" version="0.2.1.0" targetFramework="net45" />
   <package id="GenericRepository.EntityFramework" version="0.3.1-pre01" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.30506.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Razor" version="2.0.30506.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.WebPages" version="2.0.30506.0" targetFramework="net40" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
   <package id="Unity" version="2.1.505.2" targetFramework="net45" />
-  <package id="xunit" version="1.9.2" targetFramework="net40" />
+  <package id="xunit" version="1.9.2" targetFramework="net45" />
 </packages>
