--- a/src/MvcDemos/Web.config
+++ b/src/MvcDemos/Web.config
@@ -75,7 +75,7 @@
       </providers>
     </sessionState>
 
-    <customErrors mode="On" defaultRedirect="~/views/error/Unknown.cshtml">
+    <customErrors mode="Off" defaultRedirect="~/views/error/Unknown.cshtml">
       <error statusCode="404" redirect="~/views/error/404.cshtml" />
       <error statusCode="401" redirect="~/views/error/401.cshtml" />
       <error statusCode="500" redirect="~/views/error/500.cshtml" />
