--- a/src/UnitTests/UnitTests.csproj
+++ b/src/UnitTests/UnitTests.csproj
@@ -130,6 +130,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Core\Handlers\Genre\HasPermissionToGetTests.cs" />
+    <Compile Include="Builders\GenreServiceBuilder.cs" />
     <Compile Include="Core\Services\GenreServiceTests.cs" />
     <Compile Include="FakeDbSet.cs" />
     <Compile Include="Filtering\GenericQueryOptionsTests.cs" />
@@ -159,6 +160,7 @@
       <Name>MvcDemos</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
