* added basic command handling

--- a/src/IntegrationTests/IntegrationTests.csproj
+++ b/src/IntegrationTests/IntegrationTests.csproj
@@ -75,6 +75,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CommandHandler\ChangeTaskStatusCommandHandlerTests.cs" />
     <Compile Include="InitializeEFTests.cs" />
     <Compile Include="DatabaseSeedingInitializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
