--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -67,6 +67,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Command\ICommandHandler.cs" />
     <Compile Include="Dtos\AlbumDto.cs" />
     <Compile Include="Dtos\PaginatedDto.cs" />
     <Compile Include="Dtos\GenreDto.cs" />
@@ -81,6 +82,7 @@
     <Compile Include="Entities\Genre.cs" />
     <Compile Include="Entities\Order.cs" />
     <Compile Include="Entities\OrderDetail.cs" />
+    <Compile Include="Entities\Task.cs" />
     <Compile Include="Handlers\Genre\HasPermissionToGet.cs" />
     <Compile Include="Handlers\Genre\CanBeAdded.cs" />
     <Compile Include="MusicStoreEntities.cs" />
@@ -100,6 +102,8 @@
     <Compile Include="Services\Validation\ValidatorT.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="CommandHandler\" />
+    <Folder Include="Cqrs\" />
     <Folder Include="Interfaces\" />
   </ItemGroup>
   <ItemGroup>
