--- a/src/IntegrationTests/IntegrationTests.csproj
+++ b/src/IntegrationTests/IntegrationTests.csproj
@@ -79,6 +79,7 @@
     <Compile Include="InitializeEFTests.cs" />
     <Compile Include="DatabaseSeedingInitializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QueryHandler\TasksByStatusQueryHandlerTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
