--- a/src/UnitTests/UnitTests.csproj
+++ b/src/UnitTests/UnitTests.csproj
@@ -132,6 +132,7 @@
     <Compile Include="Core\Command\ChangeTaskStatusCommandHandlerTests.cs" />
     <Compile Include="Core\Handlers\Genre\HasPermissionToGetTests.cs" />
     <Compile Include="Builders\GenreServiceBuilder.cs" />
+    <Compile Include="Core\Services\ChangeTaskStatusValidationCommandHandlerDecorator.cs" />
     <Compile Include="Core\Services\GenreServiceTests.cs" />
     <Compile Include="FakeDbSet.cs" />
     <Compile Include="Filtering\GenericQueryOptionsTests.cs" />
