* a demo project to illustrate Feature based mvc structure

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,9 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\MvcModular\packages.config" />
   <repository path="..\src\Core\packages.config" />
   <repository path="..\src\Infrastructure\packages.config" />
   <repository path="..\src\IntegrationTests\packages.config" />
   <repository path="..\src\MvcDemos\packages.config" />
+  <repository path="..\src\MvcModular\packages.config" />
   <repository path="..\src\My.Repository.EF\packages.config" />
   <repository path="..\src\UnitTests\packages.config" />
 </repositories>
