--- a/src/MvcDemos/MvcDemos.csproj
+++ b/src/MvcDemos/MvcDemos.csproj
@@ -190,6 +190,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApiControllers\GenreController.cs" />
+    <Compile Include="App_Start\AutoMapperConfig.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\CompositionRoot.cs" />
     <Compile Include="App_Start\CustomErrorHander.cs" />
@@ -216,6 +217,7 @@
     <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\SGAccountController.cs" />
+    <Compile Include="Infrastructure\IMapFrom.cs" />
     <Compile Include="MvcCore\GlobalError\ErrorHandlingActionInvoker.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -280,6 +282,9 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Samples\AutoMapper\AutoMapperController.cs" />
+    <Compile Include="Samples\AutoMapper\Person.cs" />
+    <Compile Include="Samples\AutoMapper\PersonViewModel.cs" />
     <Compile Include="Samples\LocalizationController.cs" />
     <Compile Include="Samples\EnumLocalizedDropDown\EnumLocalizedDropDownController.cs" />
     <Compile Include="Samples\Validation\GenreController.cs" />
@@ -926,6 +931,8 @@
     <Content Include="Views\Error\TestError.cshtml" />
     <Content Include="Views\AjaxForm\MockAjaxCall.cshtml" />
     <Content Include="Views\Validation\Index.cshtml" />
+    <Content Include="Views\AutoMapper\SimpleMapping.cshtml" />
+    <Content Include="Views\AutoMapper\CustomMapping.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
