--- a/src/MvcDemos/MvcDemos.csproj
+++ b/src/MvcDemos/MvcDemos.csproj
@@ -217,6 +217,8 @@
     <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\SGAccountController.cs" />
+    <Compile Include="Infrastructure\ActionFilter\HandleRecordNotFoundAttribute.cs" />
+    <Compile Include="Infrastructure\ActionResult\ResourceNotFoundResult.cs" />
     <Compile Include="MvcCore\GlobalError\ErrorHandlingActionInvoker.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -286,6 +288,7 @@
     <Compile Include="Samples\AutoMapper\PersonViewModel.cs" />
     <Compile Include="Samples\LocalizationController.cs" />
     <Compile Include="Samples\EnumLocalizedDropDown\EnumLocalizedDropDownController.cs" />
+    <Compile Include="Samples\UnknownRecordController.cs" />
     <Compile Include="Samples\Validation\MyCustomValidationExceptionHandlingActionInvoker.cs" />
     <Compile Include="Samples\Validation\ValidationBaseController.cs" />
     <Compile Include="Samples\Validation\FluentValidationExceptionHandlingActionInvoker.cs" />
