--- a/src/MvcDemos/Web.config
+++ b/src/MvcDemos/Web.config
@@ -31,7 +31,6 @@
       </system.Web>
   -->
   <system.web>
-    <!--<globalization enableclientbasedculture="true" uiculture="nl-BE" culture="auto"></globalization>-->
     <compilation debug="true" targetFramework="4.5" />
     <pages controlRenderingCompatibilityVersion="4.0">
       <namespaces>
@@ -75,7 +74,7 @@
       </providers>
     </sessionState>
 
-    <customErrors mode="Off" defaultRedirect="~/views/error/Unknown.cshtml">
+    <customErrors mode="On" defaultRedirect="~/views/error/Unknown.cshtml">
       <error statusCode="404" redirect="~/views/error/404.cshtml" />
       <error statusCode="401" redirect="~/views/error/401.cshtml" />
       <error statusCode="500" redirect="~/views/error/500.cshtml" />
