* allow javascript files in Views directory

--- a/src/MvcDemos/Views/Web.config
+++ b/src/MvcDemos/Views/Web.config
@@ -43,8 +43,17 @@
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
     <handlers>
+      <!-- This allows *.js files to be requested but blocks requests for anything else -->
+      <add name="JavaScriptHandler"
+         path="*.js"
+         verb="*"
+         preCondition="integratedMode"
+         type="System.Web.StaticFileHandler" />
+
+      <!-- causes IIS to return a 404 (not found) error message to anyone requesting any content under the ~/View directory. -->
       <remove name="BlockViewHandler" />
-      <add name="BlockViewHandler" path="*" verb="*" preCondition="integratedMode" type="System.Web.HttpNotFoundHandler" />
+      <add name="BlockViewHandler" path="*" verb="*" preCondition="integratedMode" type="System.Web.HttpNotFoundHandler" />     
+
     </handlers>
   </system.webServer>
 </configuration>
