Handle NullReferenceException properly on accessing chains of potentially null properties

--- a/My.Framework/My.Framework.csproj
+++ b/My.Framework/My.Framework.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Extension\StringBuilerExtension.cs" />
     <Compile Include="Extension\StringExtensions.cs" />
     <Compile Include="Filtering\GenericQueyOptions.cs" />
+    <Compile Include="Helper\NotNull.cs" />
     <Compile Include="Infrastructure\Mapping\IHaveCustomMappings.cs" />
     <Compile Include="Infrastructure\Mapping\IMapFrom.cs" />
     <Compile Include="Mvc\HtmlHelper\HtmlEnumHelper.cs" />
