--- a/src/UnitTests/UnitTests.csproj
+++ b/src/UnitTests/UnitTests.csproj
@@ -151,6 +151,7 @@
     <Compile Include="FakeDbSet.cs" />
     <Compile Include="Filtering\GenericQueryOptionsTests.cs" />
     <Compile Include="FluentsecurityDemo\FluentsecurityTests.cs" />
+    <Compile Include="Framework\Helper\NotNullTests.cs" />
     <Compile Include="Framework\Mvc\HtmlHelper\HtmlEnumHelperTests.cs" />
     <Compile Include="Framework\Mvc\HtmlHelper\HtmlHelper.cs" />
     <Compile Include="MvcDemos\ApiControllers\GenreControllerTests.cs" />
